# PS2Bot

./: .gitignore  Dockerfile  Procfile  README.md  bot.py  config-dev.ini  config.ini  docker-compose.yml  irassyai.txt  kanshi.py  main.py  pyproject.toml  requirements-dicordpy.txt  requirements.txt  role.py  squad.py
.github/: dependabot.yml
.github/workflows/: lint.yaml  main.yml  publish.yaml  workflow.yml
command/: alert.py  bot.py  newyear.py  role.py  squad.py
func/: alert.py  bot.py  outfit_event.py  role.py  squad.py
message_template/: help.txt  irassyai.txt
