[project]
name = "ps2bot"
version = "1.0.0"
description = "Discord bot for PlanetSide 2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "py-cord>=2.7.2",
    "requests>=2.32.4",
    "matplotlib>=3.10.9",
    "dill>=0.4.0",
]

[dependency-groups]
dev = ["ty>=0.0.32"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty.environment]
python-version = "3.12"
